--- a/.config/i3/picom.conf
+++ b/.config/i3/picom.conf
@@ -103,7 +103,7 @@ shadow-offset-y = -15;
 shadow-exclude = [
   "name = 'Notification'",
   "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
+  "class_g = 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
@@ -212,7 +212,8 @@ opacity-rule = [
   "100:class_g    = 'XTerm'",
   "100:class_g    = 'URxvt'",
   "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
+  "80:class_g    = 'Alacritty'",
+  "90:class_g    = 'Hyper'",
   "80:class_g     = 'Polybar'",
   "100:class_g    = 'code-oss'",
   "100:class_g    = 'Meld'",
@@ -283,9 +284,9 @@ blur-background-exclude = [
   # when taking selection screenshot with `main`
   # https://github.com/naelstrof/maim/issues/130
   "class_g = 'slop'",
-  "class_g = 'Alacritty'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
+
 
 
 #################################
@@ -515,3 +516,4 @@ wintypes:
   popup_menu = { opacity = 1; fade = false; }
   dropdown_menu = { opacity = 1; fade = false; }
 };
+
