--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,43 +1,39 @@
-# start window indexing at one instead of zero
+# Reset
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",xterm-256color:Tc"
 set -g base-index 1
 set -g pane-base-index 1
-
 set -g history-limit 1000000
 set -g mouse on
-
-
-# Tmux Appearance -------------------- {{{
-set -g status-left " #S "
-set -g status-left-length 13
-set -g status-left-style fg=#eee8d5,bold,bg=#74ADE9
-
-
-set -g window-status-current-style fg=#eee8d5,bold,bg=#74ADE9
-set -g window-status-current-format "#{?window_last_flag,`, }#{?window_zoomed_flag,[,}#I:#W#{?window_zoomed_flag,],}#{?window_last_flag,`, }"
-set -g window-status-format "#{?window_last_flag,`, }#{?window_zoomed_flag,[,}#I:#W#{?window_zoomed_flag,],}#{?window_last_flag,`, }"
-
-set -g status-style fg=colour242,bg=#2D313C
-# #h hostshort , #S session , #W window , #T pane name
-wg_prfx=" #[fg=colour231,bg=default]#{?client_prefix,Prefix,}"  # prefix indicator widget
-wg_pane=" #[fg=colour202,bg=default]#{=26:pane_title}"
-wg_time=" #[fg=colour1,bold,bg=default]%H:%M"
-set -g status-right "${wg_prfx} Wiscaksono "
-# }}}
-
-# C-b is not acceptable as prefix -- Vim uses it
+unbind r
 unbind C-b
 set -g prefix  C-a
-bind C-a send-prefix
+setw -g mode-keys vi
 
-# Easy bindings for split
-bind '|' split-window -h -c "#{pane_current_path}"
-bind '\' split-window -v -c "#{pane_current_path}"
+# Appearance
+set -g mode-style "fg=#262626,bg=#93a1a1"
+set -g message-style "fg=#262626,bg=#93a1a1"
+set -g message-command-style "fg=#262626,bg=#93a1a1"
+set -g pane-border-style "fg=#78a9ff"
+set -g pane-active-border-style "fg=#78a9ff"
+set -g status "on"
+set -g status-interval 2
+set -g status-justify "left"
+set -g status-style "fg=#586e75,bg=#262626"
+set -g status-bg "#262626"
+set -g status-left-length "100"
+set -g status-right-length "100"
+set -g status-left-style NONE
+set -g status-right-style NONE
+set -g status-left "#[fg=#262626,bg=#78a9ff,nobold] #S #[fg=#78a9ff,bg=#262626]"
+set -g status-right "#[fg=#9ja1a1,nobold,nounderscore,noitalics]  #{wakatime}  󰍛 #(top -l 1 | awk '/CPU usage/ {print 100 - $7}')   #{battery_percentage}  #(gitmux -cfg $HOME/.gitmux.conf) #[fg=#78a9ff,bg=#262626,nobold,nounderscore,noitalics]#[fg=#262626,bg=#78a9ff,nobold]  #(echo #h | tr '[:lower:]' '[:upper:]') #[fg=#78a9ff,bg=#78a9ff,nobold]"
+setw -g window-status-activity-style "underscore,fg=#839496,bg=#93a1a1"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE"
+setw -g window-status-format '#[fg=#93a1a1] #{?window_zoomed_flag,󰁌 ,}#I '
+setw -g window-status-current-format '#[fg=#262626,bg=#93a1a1]#[fg=#262626,bg=#93a1a1] #{?window_zoomed_flag,󰁌 ,}#I #[fg=#93a1a1,bg=#262626]'
 
-unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-
-# switch windows alt+number
+# Binding
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
 bind -n M-3 select-window -t 3
@@ -47,20 +43,24 @@ bind -n M-6 select-window -t 6
 bind -n M-7 select-window -t 7
 bind -n M-8 select-window -t 8
 bind -n M-9 select-window -t 9
-
-# act like vim
-setw -g mode-keys vi
+bind C-a send-prefix
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind '|' split-window -h -c "#{pane_current_path}"
+bind '\' split-window -v -c "#{pane_current_path}"
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# list of plugins
+# Plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/vim-tmux-navigator'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'xamut/tmux-network-bandwidth'
+set -g @plugin 'wiscaksono/tmux-wakatime'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
+# Plugion customizations
+set-option -g @tmux-weather-location "Jakarta"
 
 #Initialize TMUX plugin manager (keep it in very bottom)
 run '~/.tmux/plugins/tpm/tpm'
-
-
