--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set -g history-limit 1000000
 set -g mouse on
+set -g set-clipboard on
 unbind r
 unbind C-b
 set -g prefix  C-a
